--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
-    <title>Display Data</title>
+    <title>Receive Parameters</title>
   </head>
   <body>
-    <div id="dataContainer"></div>
     <script>
-      const params = new URLSearchParams(window.location.search);
-      const data = JSON.parse(decodeURIComponent(params.get("data")));
+      const urlParams = new URLSearchParams(window.location.search);
+      const obj = urlParams.get("obj");
 
-      const dataContainer = document.getElementById("dataContainer");
-      dataContainer.innerHTML = `
-        <h1>${data.name}</h1>
-        <p>Age: ${data.age}</p>
-      `;
+      document.write(`Name: ${obj.name}`);
+      document.write(`<br>Age: ${obj.age}`);
     </script>
-    <h1>Bimochan Shrestha</h1>
   </body>
 </html>
